--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/blank.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/blank.html
@@ -387,7 +387,7 @@ font-size: 14pt;
 
 
 <div class="ms-rteElement-Callout4">
-	<div>Необходимые&#160;документы для поступления:</div>
+	<div>Необходимые документы для поступления:</div>
 	<ul>
 		<li>
 			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
@@ -404,6 +404,6 @@ font-size: 14pt;
 				</li>
 			</ul>
 		</li>
-		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		<li>другие документы (копия паспорта, копия документа об образовании, фотографии и др.)</li>
 	</ul>
 </div>
