--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -1,14 +1,9 @@
 
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -141,28 +136,7 @@ font-size: 14pt;
 
 
 <div>
-	<div class="ms-rteElement-Callout4">
-		<div>Необходимые&#160;документы для поступления:</div>
-		<ul>
-			<li>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
-			<li>
-				<font color="#03497e">
-					<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
-				</font>;</li>
-			<li>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">договоры:</a><ul><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
-					</a><li><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
-					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-				</ul>
-			</li>
-			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-		</ul>
-	</div>
+	
 	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
 	<p class="ms-rteElement-P">
 		<strong>Базовые дисциплины</strong>
@@ -242,3 +216,29 @@ font-size: 14pt;
 	<br/>
 </div>
 </div>
+
+
+
+
+<div class="ms-rteElement-Callout4">
+		<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+					<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
+				</font>;</li>
+			<li>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">договоры:</a><ul><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a><li><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+			</li>
+			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+		</ul>
+	</div>
