--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin_cred.html
@@ -2,15 +2,10 @@
 
 
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -91,7 +86,8 @@ font-size: 14pt;
 				<p class="MsoNormal" align="left">
 					<span style="font-size: 12pt; line-height: 115%; color: black;">очно-заочная</span>
 					<span style="font-size: 12pt; line-height: 115%;">
-				</span></p>
+					</span>
+				</p>
 			</td>
 		</tr>
 		<tr style="height: 20.1pt;">
@@ -113,9 +109,11 @@ font-size: 14pt;
 						<span style="font-size: 12pt; line-height: 115%;">Форма аттестации</span>
 					</b>
 					<b>
-				</b></p>
-<b>
-			</b></td>
+					</b>
+				</p>
+				<b>
+				</b>
+			</td>
 			<td width="430" style="width: 322.25pt; border-color: currentcolor black windowtext currentcolor; border-style: none solid solid none; border-width: medium 1pt 1pt medium; padding: 0cm 5.4pt; height: 20.1pt;">
 				<p class="MsoNormal" align="left">
 					<span style="font-size: 12pt; line-height: 115%;">экзамен</span>
@@ -163,27 +161,6 @@ font-size: 14pt;
 
 
 
-<div class="ms-rteElement-Callout4">
-					<div>Необходимые&#160;документы для поступления:</div>
-					<ul>
-						<li>
-							<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
-						<li>
-							<font color="#03497e">
-								<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
-							</font>;</li>
-						<li>договоры:<ul>
-								<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-							</ul>
-						</li>
-						<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-					</ul>
-				</div>
 
 
 
@@ -192,11 +169,6 @@ font-size: 14pt;
 
 
 
-
-
-<div>
-
-</div>
 <p class="MsoNormal" style="text-align: justify;">
 	<b>
 		<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
@@ -223,7 +195,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -238,7 +211,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -252,7 +226,8 @@ font-size: 14pt;
 	<span style="font-size: 12pt; line-height: 115%;">Налоги и налогообложение</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -267,7 +242,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -282,7 +258,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -297,7 +274,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -320,7 +298,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -335,7 +314,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -350,7 +330,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -365,7 +346,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -380,7 +362,8 @@ font-size: 14pt;
 	<span style="font-size: 13pt; line-height: 115%;">.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -394,7 +377,8 @@ font-size: 14pt;
 	<span style="font-size: 12pt; line-height: 115%;">Инвестиционный анализ.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -408,7 +392,8 @@ font-size: 14pt;
 	<span style="font-size: 12pt; line-height: 115%;">Оценка и анализ финансовых рисков.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -422,7 +407,8 @@ font-size: 14pt;
 	<span style="font-size: 12pt; line-height: 115%;">Страховое дело.</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>
+		</span>
+	</b>
 </p>
 <div>
 
@@ -437,4 +423,34 @@ font-size: 14pt;
 специалистов.​</span>
 	<b>
 		<span style="font-size: 12pt; line-height: 115%;">
-	</span></b>​</p>
+		</span>
+	</b>​</p>
+
+
+
+
+
+
+
+
+<div class="ms-rteElement-Callout4">
+	<div>Необходимые&#160;документы для поступления:</div>
+	<ul>
+		<li>
+			<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
+		<li>
+			<font color="#03497e">
+				<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
+			</font>;</li>
+		<li>договоры:<ul>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+			</ul>
+		</li>
+		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+	</ul>
+</div>
