--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -1,14 +1,9 @@
 
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -151,51 +146,20 @@ font-size: 14pt;
 		</tbody>
 	</table>
 
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="font-size: 12pt; line-height: 115%; font-family: arial, sans-serif;">​</span>
-	</p>
+	
+	
+	
+	
+	
+	
 
-	<p class="MsoNormal" style="text-align: justify;">
-		<b>
-			<span style="font-size: 14pt; line-height: 115%;">Необходимые документы для поступления:</span>
-		</b>
-	</p>
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">анкета;</span>
-	</p>
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">заявление;</span>
-	</span></p>
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; &#160;·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
-		
-		<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
-		
-		
-		
-		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">;</span>
-	</span></p>
-	<p class="MsoNormal" style="text-align: justify;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 14pt; line-height: 115%; font-family: symbol;">&#160; &#160; &#160; ·<span style="font-stretch: normal; font-size: 7pt; line-height: normal; font-family: &quot;times new roman&quot;;">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
-			</span>
-		</span>
-		<span style="text-indent: -18pt; background-color: transparent; font-size: 12pt; line-height: 115%;">другие документы (копия паспорта, копия
-документа об образовании, фотографии и др.)</span>
-	</span></p>
 
+	
+	
+	
+	
+	
+	
 	<p class="MsoNormal" style="text-align: justify;">
 		<b>
 			<span style="font-size: 14pt; line-height: 115%;">Перечень дисциплин </span>
@@ -346,5 +310,27 @@ font-size: 14pt;
 			<span style="font-size: 12pt; line-height: 115%;">
 		</span></b>
 	</p>
-​</div>
 ​
+​
+
+
+
+
+
+
+
+
+
+<div class="ms-rteElement-Callout4">
+	<div>Необходимые документы для поступления:</div>
+	<ul>
+		<li>
+			анкета;</li>
+		<li>
+			заявление;</li>
+		<li>
+		<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_qualification_Fiz_lico.docx">договор​</a>
+		</li>
+		<li>другие документы (копия паспорта, копия документа об образовании, фотографии и др.)</li>
+	</ul>
+</div>
