--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -1,13 +1,8 @@
 <style>
-#myblank {
-font-size: 14pt;
-font-family: Times;
-text-align: justify;
-line-height: 115%; 
-}
-.link {
-font-size: 14pt;
-}
+#myblank
+{font-size:14pt;font-family:Times;text-align:justify;line-height:115%;}
+.link
+{font-size:14pt;}
 </style>
 
 
@@ -54,18 +49,6 @@ font-size: 14pt;
 
 
 
-
-
-
-
-
-
-
-
-								<style>
-</style>
-								<style>
-</style>
 
 
 
@@ -153,56 +136,16 @@ font-size: 14pt;
 	
 	
 	<div>
-		<div class="ms-rteElement-Callout4">
-			<div>Необходимые&#160;документы для поступления:</div>
-			<ul>
-				<li>
-					<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
-				<li>
-					<font color="#03497e">
-						<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
-					</font>;</li>
-				<li>договоры:</li>
-				<ul>
-					<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-				</ul>
-				<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-			</ul>
-		</div>
+		
 		<h3 class="ms-rteElement-H3B">Перечень модулей</h3>
 		<p class="ms-rteElement-P">
 			<strong>
 		</strong></p>
+		
+		
+		
+		
 <strong>
-
-		
-		
-		
-		
-
-
-
-
-
-
-
-
-
-
-		<style>
-</style>
-		<style>
-</style>
-
-
-
-
-
 
 		<p class="MsoNormal" style="text-align: justify;">
 			<b>
@@ -297,6 +240,35 @@ font-size: 14pt;
 		</p>
 
 
+		
+		
+		
+		
+<div class="ms-rteElement-Callout4">
+	<div>Необходимые&#160;документы для поступления:</div>
+		<ul>
+			<li>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
+			<li>
+				<font color="#03497e">
+						<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
+					</font>;</li>
+				<li>договоры:</li>
+				<ul>
+					<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+				</ul>
+				<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+			</ul>
+</div>		
+		
+		
+		
+		
 
 
 
@@ -349,6 +321,10 @@ font-size: 14pt;
 	<div>
 		<br/>
 	</div>
-</strong></div>
+</strong>
 <strong>
 <br/></strong>
+
+
+
+
