переподготовка главная таблица полосатая

--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/default.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/default.html
@@ -7,6 +7,12 @@ line-height:normal;
 }
 .link
 {font-size:12pt;}
+
+td { font-size:14pt;
+font-family:Times;
+text-align:justify;
+line-height:normal;
+}
 </style>
 
 
@@ -23,11 +29,13 @@ line-height:normal;
 		<br/>
 
 		<strong>
-			<p style="color: rgb(37, 101, 105); font-size:16pt; font-family:Times;">
+			</strong></p>
+<p style="color: rgb(37, 101, 105); font-size: 16pt; font-family: times;"><strong>
 Программы профессиональной переподготовки направлены на получение компетенции, необходимой для выполнения нового вида профессиональной деятельности.
-			</p>
+			</strong></p>
+<strong>
 		</strong>
-	</p>
+	<p></p>
 	<br/>
 
 
@@ -36,112 +44,121 @@ line-height:normal;
 
 
 
-	<h3 class="ms-rteElement-H3B ms-rteThemeForeColor-1-0" style="text-align: center; background-color: rgb(37, 101, 105); font-family:Times; font-size:16pt;">Перечень реализуемых направлений профессиональной переподготовки
+	<h3 class="ms-rteElement-H3B ms-rteThemeForeColor-1-0" style="text-align: center; background-color: rgb(37, 101, 105); font-family: times; font-size: 16pt;">Перечень реализуемых направлений профессиональной переподготовки
 	</h3>
 </div>
 <div id="myblank">
-	<table cellspacing="0" cellpadding="5" border="1">
+	<table class="ms-rteTable-1" cellspacing="0" cellpadding="5" border="1">
 		<tbody>
 
-			<tr>
-				<td width="60%" style="text-align:center;">
+			<tr class="ms-rteTableEvenRow-1">
+				<td class="ms-rteTableEvenCol-1" width="60%" style="text-align: center;">
 					<strong>Название программы​</strong>
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					<strong>Период обучения</strong>
 				</td>
-				<td width="15%" style="text-align:center;">
+				<td class="ms-rteTableEvenCol-1" width="15%" style="text-align: center;">
 					​<strong>Стоимость</strong>
 				</td>
 			</tr>
-			<tr>
+			<tr class="ms-rteTableOddRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/gb.aspx">Главный бухгалтер</a>
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					3-4 месяца
 				</td>
-				<td width="15%" style="text-align:center;">
+				<td width="15%" style="text-align: center;">
 					30 000 руб
 				</td>
 			</tr>
-			<tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/prav_reg.aspx">​Правовое регулирование деятельности организации</a>
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					​7-8 месяцев
 				</td>
-				<td width="15%" style="text-align:center;">
+				<td width="15%" style="text-align: center;">
 					35 000 руб
 				</td>
 			</tr>
-			<tr>
-				<td width="60%" style="text-align:left;">
+			<tr class="ms-rteTableOddRow-1">
+				<td width="60%" style="text-align: left;">
 					<a href="/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.aspx">Переводчик в сфере профессиональной коммуникации</a>
 				</td>
-				<td width="25%" width="25%" style="text-align:center;" valign="center">
-					2 года
+				<td class="ms-rteTableOddCol-1" width="25%" valign="center" style="text-align: center;">
+					<div style="font-size:8pt;">&#160;<br/></div>
+<div valign="center">2 года</div>
 				</td>
-				<td width="15%" style="text-align:center;"valign="center">
-					40 000 руб
+				<td width="15%" valign="center" style="text-align: center;">
+					<div style="font-size:8pt;">&#160;<br/></div>
+<div valign="center">40 000 руб</div>
 				</td>
 			</tr>
-			<tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/fin_cred.aspx">Финансы и кредит​</a>
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					4-6 месяца
 				</td>
-				<td width="15%" style="text-align:center;">
+				<td width="15%" style="text-align: center;">
 					​27 300 руб
 				</td>
 			</tr>
-			<tr>
+			<tr class="ms-rteTableOddRow-1">
 				<td width="60%">
 					​Эксперт в сфере закупок
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					​2-4 месяца
 				</td>
 				<td width="20%" valign="top">
 
 				</td>
 			</tr>
-			<tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/spec_zakup.aspx">​Специалист в сфере закупок</a>
 				</td>
-				<td width="25%" style="text-align:center;">
+				<td class="ms-rteTableOddCol-1" width="25%" style="text-align: center;">
 					​2-4 месяца
 				</td>
-				<td width="15%" style="text-align:center;">
+				<td width="15%" style="text-align: center;">
 					​25 000 руб
 				</td>
 			</tr>
-			<tr>
+			<tr class="ms-rteTableOddRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/fin-men.aspx">Финансовый менеджмент</a>
 				</td>
-				<td rowspan="4" width="25%" style="text-align:center;" valign="center">
-					6-8 месяцев​
+				<td class="ms-rteTableOddCol-1" rowspan="4" width="25%" valign="center" style="text-align: center;">
+					<div style="font-size:33pt;">&#160;<br/></div>
+<div valign="center">6-8 месяцев​</div>
 				</td>
-				<td rowspan="4" width="15%" style="text-align:center;"valign="center">
-					30 000 руб
+				<td rowspan="4" width="15%" valign="center" style="text-align: center;">
+					<div style="font-size:33pt;">&#160;<br/></div>
+<div valign="center">30 000 руб</div>
 				</td>
 			</tr>
-			<tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
 				<td width="60%">
 					<a target="_blank" href="/fil/smolensk/dpo/retraining/Pages/buh.aspx">Бухгалтерский учет, анализ и аудит</a>
 				</td>
 			</tr>
-			<tr>
+			<tr class="ms-rteTableOddRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/ekupr.aspx">​Экономика труда и управление персоналом</a>
 				</td>
 			</tr>
-			<tr>
+			
+			<tr class="ms-rteTableEvenRow-1">
 				<td width="60%">
 					<a href="/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.aspx">​Государственное и муниципальное управление
 					</a>
@@ -186,7 +203,10 @@ line-height:normal;
 
 
 
-<div class="ms-rteElement-Callout4" style="text-align: center; font-family:Times; font-size:16pt;">
-	<p >По окончании обучения слушателю выдается</p>
+<div class="ms-rteElement-Callout4" style="text-align: center; font-family: times; font-size: 16pt;">
+	<p>По окончании обучения слушателю выдается</p>
 	<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">Диплом о профессиональной переподготовке с приложением</a>
+	<div>
+		<br/>
+	</div>
 </div>
